mobile screen almost done

--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
             </div>
             <div class="navigations">
                 <div class="mobile-nav-wrapper">
-                    <button class="mobile-menu-btn">
+                    <button class="mobile-menu-btn" id="mobileNavBtn">
                         <img src="images/icon-hamburger.svg" alt="menu icon" class="open-menu">
                         <img src="images/icon-close-menu.svg" alt="cross icon" class="close-menu">
                     </button>
+                    <div class="contrast-modal"></div>
                     <nav class="mobile-nav">
+                        
                         <ul>
                             <li>
                                 <a href="#">About</a>
@@ -67,10 +69,12 @@
                             <p class="revenue-top">$89,914</p>
                             <span class="revenue-bottom">of $100,000 backed</span>
                         </div>
+                        <hr>
                         <div class="revenue-box">
                             <p class="revenue-top">5,007</p>
                             <span class="revenue-bottom">total backers</span>
                         </div>
+                        <hr>
                         <div class="revenue-box">
                             <p class="revenue-top">56</p>
                             <span class="revenue-bottom">days left</span>
@@ -85,7 +89,7 @@
 
                 <div class="box-three">
                     <p class="about-text">About this project</p>
-                    <p>The Mastercraft Bamboo Monitor Riser is a sturdy and stylish platform that elevates your screen to a more comfortable viewing height. Placing your monitor at eye level has the potential to improve your posture and make you more comfortable while at work, helping you stay focused on the task at hand. <br>
+                    <p>The Mastercraft Bamboo Monitor Riser is a sturdy and stylish platform that elevates your screen to a more comfortable viewing height. Placing your monitor at eye level has the potential to improve your posture and make you more comfortable while at work, helping you stay focused on the task at hand. <br><br>
                     Featuring artisan craftsmanship, the simplicity of design creates extra desk space below your computer to allow notepads, pens, and USB sticks to be stored under the stand.</p>
                     <div class="box-three-card-wrapper">
 
@@ -115,7 +119,7 @@
                             <button type="button" class="btn">Select Reward</button>
 
                         </div>                                                
-                        <div class="box-three-card">
+                        <div class="box-three-card out">
                             <div class="stand-details">
                                 <p class="name">Mahogany Special Edition</p>
                                 <span class="pledge">Pledge $200 or more</span>
