--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script src="index.js" defer></script>
-    <title>Crowdfunding</title>
+    <title>Crowdfunding Landing Page</title>
 </head>
 <body>
     <main class="container">
